kuber-homeworks/1-8/configs/dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool
  namespace: netology-8
spec:
  selector:
    matchLabels:
      app: ngmult
  replicas: 1
  template:
    metadata:
      labels:
        app: ngmult
    spec:
      containers:
        - name: nginx
          image: nginx:1.27.0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-index-file
              mountPath: /usr/share/nginx/html/
        - name: multitool
          image: wbitt/network-multitool
          ports:
            - containerPort: 8080
      volumes:
        - name: nginx-index-file
          configMap:
            name: multitool-maps
