kuber-homeworks/1-8/configs/nginx_dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-only
  namespace: netology-8
  labels:
    app: nginx-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-frontend
  template:
    metadata:
      labels:
        app: nginx-frontend
    spec:
      containers:
        - name: nginx
          image: nginx:1.27.0
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: nginx-mount
              mountPath: /usr/share/nginx/html
      volumes:
        - name: nginx-mount
          configMap:
            name: nginx-maps
