kuber-homeworks/1-8/configs/nginx_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: netology-8
spec:
  type: ClusterIP
  selector:
    app: nginx-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
