kuber-homeworks/1-8/configs/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool-svc
  namespace: netology-8
spec:
  selector:
    app: ngmult
  ports:
    - protocol: TCP
      name: nginx
      port: 80
      targetPort: 80
    - protocol: TCP
      name: multitool
      port: 8080
      targetPort: 1180
